--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -23,6 +23,7 @@
 @use 'components/sound-settings';
 @use 'components/data-table'; // DEPRECATED - use erps-data-tables instead
 @use 'components/erps-data-tables';
+@use 'components/erps-tabs';
 @use 'components/enhanced-grid';
 @use 'components/range-slider';
 
