--- a/templates/actor/statuses.hbs
+++ b/templates/actor/statuses.hbs
@@ -1,13 +1,13 @@
 {{! Statuses Tab }}
 <section class='tab statuses {{tab.cssClass}}' data-group='primary' data-tab='statuses'>
-  <table class='eventide-actor-data-table eventide-actor-data-table--statuses'>
-    <thead class='eventide-actor-data-table__header'>
-      <tr>
-        <th class='eventide-actor-data-table__header-cell'>{{localize 'EVENTIDE_RP_SYSTEM.Forms.Sections.Name'}}</th>
-        <th class='eventide-actor-data-table__header-cell'>
+  <table class='erps-data-table erps-data-table--statuses erps-data-table--flush-top' data-table-theme='{{userSheetTheme}}'>
+    <thead class='erps-data-table__header'>
+      <tr class='erps-data-table__header-row'>
+        <th class='erps-data-table__header-cell erps-data-table__header-cell--name'>{{localize 'EVENTIDE_RP_SYSTEM.Forms.Sections.Name'}}</th>
+        <th class='erps-data-table__header-cell erps-data-table__header-cell--controls'>
           {{#if @root.editable }}
             <a
-              class='eventide-actor-data-create'
+              class='erps-data-table__create-button'
               title='{{localize "DOCUMENT.Create" type='Item'}}'
               data-action='createDoc'
               data-document-class='Item'
@@ -20,16 +20,16 @@
         </th>
       </tr>
     </thead>
-    <tbody>
+    <tbody class='erps-data-table__body'>
       {{#each statuses as |item id|}}
         <tr
-          class='eventide-actor-data-table__row'
+          class='erps-data-table__row'
           data-item-id='{{item._id}}'
           data-drag='true'
           data-document-class='Item'
         >
-          <td class='eventide-actor-data-table__cell eventide-actor-data-table__name-cell rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>
-            <div class='eventide-actor-data-table__name-content'>
+          <td class='erps-data-table__cell erps-data-table__cell--name rollable' data-roll-type='item' data-action='roll' data-item-id='{{item._id}}'>
+            <div class='erps-data-table__name-content'>
               <img
                 src='{{item.img}}'
                 title='{{item.name}}'
@@ -39,25 +39,27 @@
               <span>{{item.name}}</span>
             </div>
           </td>
-          <td class='eventide-actor-data-table__cell eventide-actor-data-table__controls-cell'>
-            <a
-              class='eventide-actor-data-control eventide-actor-data-control--edit'
-              title='{{localize "DOCUMENT.Update" type='Status'}}'
-              data-action='viewDoc'
-              data-item-id='{{item._id}}'
-            >
-              <i class='fas fa-edit'></i>
-            </a>
-            {{#if @root.editable}}
+          <td class='erps-data-table__cell erps-data-table__cell--controls'>
+            <div class='erps-data-table__controls'>
               <a
-                class='eventide-actor-data-control eventide-actor-data-control--delete'
-                title='{{localize "DOCUMENT.Delete" type='Status'}}'
-                data-action='deleteDoc'
+                class='erps-data-table__control-button erps-data-table__control-button--edit'
+                title='{{localize "DOCUMENT.Update" type='Status'}}'
+                data-action='viewDoc'
                 data-item-id='{{item._id}}'
               >
-                <i class='fas fa-trash'></i>
+                <i class='fas fa-edit'></i>
               </a>
-            {{/if}}
+              {{#if @root.editable}}
+                <a
+                  class='erps-data-table__control-button erps-data-table__control-button--delete'
+                  title='{{localize "DOCUMENT.Delete" type='Status'}}'
+                  data-action='deleteDoc'
+                  data-item-id='{{item._id}}'
+                >
+                  <i class='fas fa-trash'></i>
+                </a>
+              {{/if}}
+            </div>
           </td>
         </tr>
       {{/each}}
